# oneclick

./: .env.example  .gitignore  .npmrc  CLAUDE.md  CONTRACT_UPLOAD_IMPLEMENTATION.md  Msanii Rights Registry (standalone).html  README.md  Right_Registry_README.md  Taskfile.yml  full_schema_2026_apr4.sql  index.html  logs_yash.txt  oneclick.md  package-lock.json  package.json  posthog-setup-report.md  tailwind.config.ts  vitest.config.ts
src/backend/: .dockerignore  Dockerfile  README.md  analytics.py  auth.py  confirm.py  downloaded-logs-20260117-003321.json  library_summary.txt  main.py  pagination.py  pyproject.toml  requirements.txt
src/backend/admin/: __init__.py  analytics_models.py  analytics_router.py  behavior_queries.py  posthog_client.py
src/backend/boards/: models.py  router.py  service.py
src/backend/credentials/: models.py  router.py  service.py
src/backend/expenses/: common.py  report_pdf.py  report_xlsx.py  router.py
src/backend/integrations/: __init__.py  connections_router.py  events.py  oauth.py
src/backend/knowledge/: __init__.py  chunking.py  ingest.py  reference_search.py
src/backend/mailer/: __init__.py  ses_client.py
src/backend/middleware/: analytics_middleware.py
src/backend/oneclick/: ONECLICK.md  README.md  Royalty Statement Scenario 2 - Sheet1.csv  breakdown.py  contract_parser.py  helpers.py  nuance_adjuster.py  royalty_calculator.py  search_chunks.py  share.py
src/backend/orgs/: __init__.py  authz.py  emails.py  models.py  projects.py  router.py  service.py  wallets.py
src/backend/projects/: emails.py  models.py  router.py  service.py  share_email.py
src/backend/rag-tools/: pinecone_upload_pdf.py
src/backend/registry/: access.py  contract_splits.py  derive_service.py  emails.py  grants_service.py  models.py  pdf_generator.py  router.py  service.py  work_links_service.py
src/backend/scripts/: __init__.py  backfill_project_aware_coverage.py  backfill_storage_mimetypes.py  clear_oneclick_cache.py  detect_non_boc_currencies.py  grant_pro.py  posthog_apply_env_filter.py  posthog_setup_dashboard.py  qa_licensing_loop.py
src/backend/settings/: __init__.py  models.py  router.py  service.py
src/backend/splitsheet/: docx_generator.py  pdf_generator.py  router.py
src/backend/subscriptions/: admin_auth.py  admin_router.py  admin_service.py  ai_pricing.py  billing_router.py  deps.py  enforcement.py  models.py  overage_billing.py  pro_requests_router.py  router.py  service.py  stripe_client.py  stripe_events.py  sweep.py
src/backend/teams/: __init__.py  authz.py  emails.py  models.py  router.py  service.py
src/backend/tests/: conftest.py  fake_supabase.py  test_account_deletion_integration.py  test_account_deletion_service.py  test_admin_analytics_router.py  test_admin_behavior_router.py  test_admin_credits.py  test_admin_router.py  test_admin_service.py  test_ai_pricing.py  test_analytics.py  test_analytics_context_endpoint.py  test_analytics_middleware.py  test_artists.py  test_backfill_coverage.py  test_behavior_queries.py  test_billing_context.py  test_billing_router.py  test_billing_sweep.py  test_billing_topup.py  test_boards.py  test_boards_analytics.py  test_boards_assignees.py  test_boards_board_id.py  test_boards_crud.py  test_boards_deletion.py  test_boards_idor.py  test_boards_links.py  test_boards_moves.py  test_boards_scoping.py  test_bootstrap_tester.py  test_bulk_get_for_users.py  test_calculator_provenance.py  test_clear_oneclick_cache.py  test_contract_markdown_reconvert.py  test_contract_parse_cache.py  test_credentials.py  test_credit_requests.py  test_credits_endpoints.py  test_credits_enforcement.py  (+119 more)
src/backend/users/: account_deletion_service.py  emails.py  router.py
src/backend/vector_search/: CHATBOT.md  README.md  config.py  contract_chatbot.py  contract_ingestion.py  contract_search.py  helpers.py  (+5 more)
(+491 files in other folders)
