[tool.poetry]
name = "msanii-backend"
version = "0.1.0"
description = "Msanii music industry management platform — FastAPI backend"
authors = ["Greenbox Analytics"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.135.3"
uvicorn = "0.43.0"
supabase = "2.28.3"
openpyxl = "3.1.5"
python-multipart = "0.0.22"
python-dotenv = "1.2.2"
certifi = "2026.2.25"
pip-system-certs = "5.3"
pymupdf = "1.27.2.2"
pymupdf4llm = "1.27.2.2"
tiktoken = "0.12.0"
openai = "2.29.0"
google-api-python-client = "2.193.0"
google-auth = "2.49.1"
google-auth-oauthlib = "1.3.1"
slack-sdk = "3.41.0"
notion-client = "3.0.0"
cryptography = "46.0.7"
PyJWT = "2.12.1"
httpx = "0.28.1"
reportlab = "4.4.10"
python-docx = "1.2.0"
resend = "2.7.0"
email-validator = "2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
ruff = "^0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E402", "E741", "B008", "B904", "SIM102", "SIM103", "SIM105", "SIM108", "UP028", "UP038"]

[tool.ruff.lint.isort]
known-first-party = ["auth", "pagination", "boards", "credentials", "registry", "projects", "settings", "splitsheet", "oneclick", "zoe_chatbot", "integrations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM116"]  # Allow if-chains for test mock sequencing

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
